# sol

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  sol.py
docs/: doubly_linked_list.html  index.html  move_to_front_list.html  transpose_list.html
docs/sol/: doubly_linked_list.html  index.html  move_to_front_list.html  transpose_list.html
docs/solists/: index.html  move_to_front_list.html
self_organizing_lists/: __init__.py  _node.py  doubly_linked_list.py  move_to_front_list.py  node.py  transpose_list.py
sol/: __init__.py  doubly_linked_list.py  move_to_front_list.py  transpose_list.py
solists/: __init__.py  _node.py  doubly_linked_list.py  transpose_list.py
tests/: test_doubly_linked_list.py  test_move_to_front_list.py  test_node.py  test_sol.py  test_transpose_list.py
