[tool.poetry]
name = "sol"
version = "0.1.0"
description = "Implementation of self-organizing lists."
authors = ["Vsevolod Bazhan <vsevozhan@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pdoc3 = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
