[tool.poetry]
name = "solists"
version = "0.1.6"
description = "Implementation of self-organizing lists."
authors = ["Vsevolod Bazhan <vsevozhan@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/vsevolodbazhan/Sol"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
